  https://charm.readthedocs.io/en/latest/charm++/manual.html#installation-with-cmake
  for more information.

- We have adopted GitHub discussions
  (https://github.com/UIUC-PPL/charm/discussions) as the preferred
  venue for Charm++ questions and discussions instead of the
  charm@cs.illinois.edu mailing list.

- The BigSim emulator has been removed from Charm++.

Charm++ Features & Fixes:

- Support for variable sized messages in TRAM.

- Added a pup_buffer API with zero copy functionality.

- Array broadcasts are now node aware, avoiding unnecessary
  duplication of messages. Expedited nokeep array broadcasts are also
  allowed now.

- Added CmiNodeReduce API for Converse node level reductions.

- Builds with CMK_OPTIMIZE=1 will only segfault to aid in debugging in
  CmiAbort when ++debug or +truecrash are provided.

- Callbacks used in liveViz have been made ASLR safe.

- Updated implementation of atomics, locks, and fences to use C++11/C11
  versions where suitable.

- Fixed bugs in HAPI and updated implementation to use new CUDA APIs.

- Added whenidle attribute to indicate entry method to be called when
  a PE is idle.

- Improved performance, support, and fixes for UCX. IBM Power is now
  supported with UCX.

- The CmiSyncSend family now tries to avoid copies for nokeep
  messages.

- Fixed bug with element IDs with CMK_GLOBAL_LOCATION_UPDATE.

- Fixed bug in BlockMap in array creation.

- Added CcdPROCESSOR_LONG_IDLE to run a function during long periods
  of idleness and CcdSCHEDLOOP to run a function during every
  scheduler loop.

- Added isCheckpoint() and isMigration() methods for users to
  condition logic inside PUP based on its purpose.

- Added execution metadata to Projections logs.

- Added several new benchmarks and tests.

- Bounded number of hops messages can take when chares frequently
  migrate.

Adaptive MPI:

- Isomalloc sync is now enabled by default and the implementation no